# illness_predict

./: .gitignore  README.md  pyproject.toml  render.yaml
.github/workflows/: deploy-pages.yml
src/api/: app.py  schemas.py
src/api/routes/: inference.py
src/config/: settings.py
src/domain/: models.py  probability.py
src/frontend/: index.html
src/frontend/static/: app.js  styles.css
src/inference/: engine.py
tests/unit/: test_engine_small_pedigree.py  test_mendelian.py
